--- a/entrega_testes_funcionais/teste_api_aluguel/build.gradle
+++ b/entrega_testes_funcionais/teste_api_aluguel/build.gradle
@@ -31,8 +31,9 @@ repositories {
 
 
 dependencies {
-	testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.3.1'
+    testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     implementation  'org.apache.httpcomponents:httpclient:4.5.10'
     compile group: 'org.json', name: 'json', version: '20200518'
 }
